Fixes descritpion on card having visible vertical space.

--- a/styles/index.css
+++ b/styles/index.css
@@ -213,7 +213,6 @@ body {
 }
 
 .recent-project-card {
-	background-color: transparent;
 	width: 14rem;
 	height: 18rem;
 	perspective: 1000px;
@@ -235,7 +234,7 @@ body {
 	opacity: 0.6;
 }
 
-.recent-project-card:hover .recent-project-card__inner {
+.recent-project-card__inner:hover {
 	transform: rotateY(180deg);
 }
 
@@ -246,8 +245,9 @@ body {
 	border-radius: 0.6rem;
 	-webkit-backface-visibility: hidden; /* Safari */
 	backface-visibility: hidden;
-	box-shadow: 0 .25rem .25rem rgba(0,0,0,0.2),
-    0 0 1rem rgba(0,0,0,0.2);
+	box-shadow: 0 .25rem .25rem rgba(0,0,0,0.2), 0 0 1rem rgba(0,0,0,0.2);
+	background-color: #333;
+	
 }
 
 .recent-project-card__reverse {
@@ -263,7 +263,7 @@ body {
 
 .recent-project-card__location {
 	width: 14rem;
-	height: 4rem;
+	height: 4em;
 	background-color: #333;
 	border-radius: 0 0 0.6rem 0.6rem;
 }
@@ -347,57 +347,6 @@ body {
 
 	.recent-project-card {}
 
-	.recent-project-card:not(:first-child) {
-		/* margin-left: 1rem; */
-	}
+	.recent-project-card:not(:first-child) {}
 
 }
-
-
-
-
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-.flip-card {
-	background-color: transparent;
-	width: 300px;
-	height: 200px;
-	border: 1px solid #f1f1f1;
-	perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  }
-  
-  /* This container is needed to position the front and back side */
-  .flip-card-inner {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	transition: transform 0.8s;
-	transform-style: preserve-3d;
-  }
-  
-  /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flip-card:hover .flip-card-inner {
-	transform: rotateY(180deg);
-  }
-  
-  /* Position the front and back side */
-  .flip-card-front, .flip-card-back {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	-webkit-backface-visibility: hidden; /* Safari */
-	backface-visibility: hidden;
-  }
-  
-  /* Style the front side (fallback if image is missing) */
-  .flip-card-front {
-	background-color: #bbb;
-	color: black;
-  }
-  
-  /* Style the back side */
-  .flip-card-back {
-	background-color: dodgerblue;
-	color: white;
-	transform: rotateY(180deg);
-  }
